--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/hjdesigner/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/hjdesigner/js-tdd-course#readme"
+  "homepage": "https://github.com/hjdesigner/js-tdd-course#readme",
+  "dependencies": {
+    "gitignore": "^0.6.0"
+  }
 }
