--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Nossa biblioteca do curso de JS com TDD na prática.",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint src/*.js",
+    "perpush": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -12,7 +14,7 @@
   },
   "keywords": [
     "js",
-    "ttdd",
+    "tdd",
     "library"
   ],
   "author": "Henrique Melanda <hjdesigner23@gmail.com> (http://www.henriquemelanda.com.br/)",
@@ -23,5 +25,11 @@
   "homepage": "https://github.com/hjdesigner/js-tdd-course#readme",
   "dependencies": {
     "gitignore": "^0.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "husky": "^0.14.3"
   }
 }
